// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alternative styles 1`] = `
.pf-c-form-control.pf-m-form-control-alt {
  display: block;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: #282d33;
  background-color: #ffffff;
  border-radius: 0;
  padding-right: 0px;
  padding-left: 0px;
  border-bottom: 2px solid #72767b;
}

<input
  aria-invalid={false}
  aria-label="alternative style text input"
  className="pf-c-form-control pf-m-form-control-alt"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value="test input"
/>
`;

exports[`disabled text input 1`] = `
.pf-c-form-control {
  display: block;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: #282d33;
  background-color: #ffffff;
  border: 1px solid #72767b;
  border-radius: 3px;
}

<input
  aria-invalid={false}
  aria-label="disabled text input"
  className="pf-c-form-control"
  disabled={true}
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value={null}
/>
`;

exports[`invalid text input 1`] = `
.pf-c-form-control {
  display: block;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: #282d33;
  background-color: #ffffff;
  border: 1px solid #72767b;
  border-radius: 3px;
}

<input
  aria-invalid={true}
  aria-label="invalid text input"
  className="pf-c-form-control"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value="test input"
/>
`;

exports[`readonly text input 1`] = `
.pf-c-form-control {
  display: block;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: #282d33;
  background-color: #ffffff;
  border: 1px solid #72767b;
  border-radius: 3px;
}

<input
  aria-invalid={false}
  aria-label="readonly text input"
  className="pf-c-form-control"
  disabled={false}
  onChange={[Function]}
  readOnly={true}
  required={false}
  type="text"
  value="read only"
/>
`;

exports[`simple text input 1`] = `
.pf-c-form-control {
  display: block;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: #282d33;
  background-color: #ffffff;
  border: 1px solid #72767b;
  border-radius: 3px;
}

<input
  aria-invalid={false}
  aria-label="simple text input"
  className="pf-c-form-control"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value="test input"
/>
`;
